--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.52 2009/10/21 15:29:04 ith Exp $
+% $Id: dbi-intro.tex,v 1.53 2009/10/26 15:24:34 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.52 2009/10/21 15:29:04 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.53 2009/10/26 15:24:34 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -32,9 +32,13 @@ including the five year data from WMAP
 physics that resulted in a phase of accelerated expansion is still 
 not well understood. String and M-theory attempt to unify the fundamental
 interactions 
-including gravity. It is important to 
+including gravity. 
+The early universe provides a unique window into high energy physics at scales currently
+unreachable by particle accelerators.
+It is therefore important to 
 develop inflationary models within string theory and to confront them with 
-cosmological observations. 
+cosmological observations.
+
  
 
 One class of string-theory models that has received 
@@ -163,54 +167,54 @@ Linde:2005dd}.
 % achieved is one of the signature features of any complete string theoretical
 % description of the universe.
 
-\subsection{Cosmology and String Theory}
-\label{sec:stringcos-dbiintro}
+% \subsection{Cosmology and String Theory}
+% \label{sec:stringcos-dbiintro}
+% % 
+% Temperatures in the early universe were far in excess of those attainable by
+% any earth-bound particle accelerator today. Hence, a stringent test of any high
+% energy
+% theory is whether it predicts the same properties of the early universe that are
+% now being observed in the CMB and elsewhere.
+% % For this reason any string theory description of the universe must include a
+% % consistent cosmological narrative. 
+% % 
+% In Chapter \ref{ch:introduction} inflation was put forward as the leading
+% scenario for the evolution of the early universe. For string theory to
+% be
+% a consistent framework for the inflationary paradigm, it must produce a period of
+% inflationary expansion. Although inflation is usually described by SM scalar
+% fields, there is no
+% evidence yet for the existence of such fields in the SM. Higher
+% energy theories such as string theory could provide an explanation for the
+% existence of inflaton fields.
+% %  In this way inflation and string theory are
+% % ideal partners and it is natural to consider them together when investigating
+% % the early universe.
 % 
-Temperatures in the early universe were far in excess of those attainable by
-any earth-bound particle accelerator today. Hence, a stringent test of any high
-energy
-theory is whether it predicts the same properties of the early universe that are
-now being observed in the CMB and elsewhere.
-% For this reason any string theory description of the universe must include a
-% consistent cosmological narrative. 
 % 
-In Chapter \ref{ch:introduction} inflation was put forward as the leading
-scenario for the evolution of the early universe. For string theory to
-be
-a consistent framework for the inflationary paradigm, it must produce a period of
-inflationary expansion. Although inflation is usually described by SM scalar
-fields, there is no
-evidence yet for the existence of such fields in the SM. Higher
-energy theories such as string theory could provide an explanation for the
-existence of inflaton fields.
-%  In this way inflation and string theory are
-% ideal partners and it is natural to consider them together when investigating
-% the early universe.
-
-
-Cosmology can be used as a tool to constrain string theory. Much of the evidence
-of an
-era of string theory physics would be removed by a period of inflation, but the
-observational results of inflation itself could provide clues about the nature
-of such an era. 
-
-One avenue of investigation would be to look for signals that are generic in string theory and
-see if they are observed. While this could not definitively prove string theory to be the 
-cause it would vindicate continued efforts to prove the theory is consistent
-with observations. Conversely any observed
-signal that is predicted to occur rarely in string theory would make the theory more implausible.
-% Limiting the parameter space of an acceptable string theory to an ever smaller
-% region would also
-% decrease its viability even if it could not be ruled out. 
-One observational parameter suited to this is the non-Gaussianity
-parameter $\fnl$ as introduced in Section~\ref{sec:fnl-intro}.
-Standard inflation models, including the single field slow roll model described in
-Section~\ref{sec:slowroll-intro}, produce small amounts of $\fnlloc$, whereas
-certain classes of string theory inspired models have large non-Gaussian
-signatures. 
-% While not exclusively a string theory effect, a detection of or
-% failure to detect non-Gaussianity would rule in and out large classes of
-% models.
+% Cosmology can be used as a tool to constrain string theory. Much of the evidence
+% of an
+% era of string theory physics would be removed by a period of inflation, but the
+% observational results of inflation itself could provide clues about the nature
+% of such an era. 
+% 
+% One avenue of investigation would be to look for signals that are generic in string theory and
+% see if they are observed. While this could not definitively prove string theory to be the 
+% cause it would vindicate continued efforts to prove the theory is consistent
+% with observations. Conversely any observed
+% signal that is predicted to occur rarely in string theory would make the theory more implausible.
+% % Limiting the parameter space of an acceptable string theory to an ever smaller
+% % region would also
+% % decrease its viability even if it could not be ruled out. 
+% One observational parameter suited to this is the non-Gaussianity
+% parameter $\fnl$ as introduced in Section~\ref{sec:fnl-intro}.
+% Standard inflation models, including the single field slow roll model described in
+% Section~\ref{sec:slowroll-intro}, produce small amounts of $\fnlloc$, whereas
+% certain classes of string theory inspired models have large non-Gaussian
+% signatures. 
+% % While not exclusively a string theory effect, a detection of or
+% % failure to detect non-Gaussianity would rule in and out large classes of
+% % models.
 
 \subsection{Extra dimensions}
 String theory predicts that the one time and three spatial dimensions that
@@ -392,7 +396,7 @@ can be identified as a scalar degree of freedom and under appropriate conditions
 could play the role of the inflaton
 field \cite{brane1,brane2,brane3,brane7,Brodie:2003qv,brane9}. 
 
-As described in Section \ref{sec:extradims}, compactifying dimensions
+As described above, compactifying dimensions
 introduces scalar fields known as moduli. These fields must be
 accounted for in the dynamics unless some way can be found to stabilise them by
 fixing their masses to be large.
@@ -498,8 +502,10 @@ a constant value in this region.
 In this section we have summarised the concepts that will be
 required to discuss DBI inflation. The compactified warped throat described
 here will provide the setting for this string theory realisation of
-inflation. In Section \ref{sec:stringcos-dbiintro} we outlined how cosmological
-observations can constrain the parameter space of string theories. In the next
+inflation. 
+% In Section \ref{sec:stringcos-dbiintro} we outlined how cosmological
+% observations can constrain the parameter space of string theories. 
+In the next
 section we connect the geometry and physics of the string compactification with
 inflationary cosmology and establish the observational parameters that will directly
 enable concrete constraints to be formulated. 
@@ -521,7 +527,9 @@ Calabi-Yau (CY) three-fold, where the form-field fluxes generate locally
 warped regions known as `throats' as described above.  The propagation of a 
 ${\rm D3}$-brane in such a region can drive inflation, where the inflaton 
 field is identified with the radial position of the brane 
-along the throat. Since this is an open string mode, the field 
+along the throat. Inflation can occur whether the brane moves towards or away from the tip of the
+throat.
+Since the radial distance is an open string mode, the field 
 equation for the inflaton is determined by a DBI action.
 
 % 
@@ -543,7 +551,7 @@ The inflaton field is related to the radial
 position of the brane by 
 $\varphi \equiv \sqrt{T_3} \rho$, where $T_3$ 
 is the brane tension defined in \eq{eq:branetensiondefn-dbiintro}. The action is
-then given by 
+then given by \cite{brane6}
 % 
 \begin{eqnarray}
 \label{eq:DBIaction-dbiintro}
@@ -704,15 +712,6 @@ may then be combined to provide a relation for the warped brane tension:
 \end{equation}
 % 
 
-To summarise thus far, in this section we have introduced the standard DBI
-inflationary scenario. This
-is a particular example of the non-canonical inflationary paradigm described in
-Section~\ref{sec:noncanoninfl}. In the case of DBI inflation the speed of sound
-parameter
-takes the simple form $c_s = 1/\PX$. The previously derived
-results for $\Pr$ and $n_s$, as well as the redefined slow roll parameters 
-\eqref{eq:epsdefn-dbiintro}--\eqref{eq:defs-dbiintro} can then be expressed in terms
-of this parameter. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -722,6 +721,10 @@ of this parameter.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+In the next two chapters we will use a powerful result due to Lyth \cite{lyth}. This
+links the change in value of the inflaton field during inflation to the production of tensor
+modes. This relation was originally derived for canonical actions but can be straightforwardly
+extended to the case of non-canonical actions such as the DBI action.
 
 Eqs. (\ref{eq:Ps-dbiintro}) and (\ref{eq:Ptdefn-intro}) imply 
 that the variation of the inflaton field during inflation  
@@ -735,7 +738,7 @@ is related to the tensor-scalar ratio by \cite{lyth,bmpaper}
 \end{equation}
 % 
 where $\N$ denotes the number of e-foldings as defined in
-\eq{eq:nefolddefn-intro}.
+\eq{eq:nefolddefn-intro}. 
 The total variation in the inflaton field between the epoch of observable 
 inflation and the end of inflation is then given by
 % 
@@ -783,14 +786,34 @@ Many attempts have been made to provide an inflationary expansion phase in the
 early universe using string theory. In compactifying from 10 dimensions to 4,
 complicated geometries and additional fluxes must be used to stabilise the
 remaining moduli fields. 
-The DBI scenario is an example of a non-canonical inflationary model. 
+
+The DBI scenario 
+is a particular example of the non-canonical inflationary paradigm described in
+Section~\ref{sec:noncanoninfl}. 
+The radial position of a D3-brane in a warped throat is identified as the inflaton field. While the
+brane moves up or down the throat, the kinetic energy of the inflaton is bounded above by requiring
+the sound speed of fluctuations to be real. This bound holds no matter how steep the potential of
+the field. The relativistic limit takes the bound to be close to saturation and the sound speed to
+be small.
+% 
+In the case of DBI inflation the speed of sound
+parameter
+takes the simple form $c_s = 1/\PX$. The previously derived
+results for $\Pr$ and $n_s$, as well as the redefined slow roll parameters 
+\eqref{eq:epsdefn-dbiintro}--\eqref{eq:defs-dbiintro} can then be expressed in terms
+of this parameter. 
+
 Significant non-Gaussianity in the density perturbations spectrum can be generated
 due to the small sound speed of the inflaton fluctuations.
-This
-non-Gaussianity can be related to the brane tension and tensor-scalar ratio
-through \eq{eq:approxlyth-dbiintro}. In the next chapter we will derive two
+This non-Gaussianity can be related to the brane tension and tensor-scalar ratio
+through \eq{eq:obswarp-dbiintro}. The tensor-scalar ratio can also by related to the variation in
+the inflaton field by the Lyth bound \eqref{eq:genlyth-dbiintro}. This relation can be refined by
+focusing only on the period of observable inflation. 
+% 
+In the next chapter we will derive two
 competing bounds on $r$ which will strongly constrain the parameter space for
 DBI models.
+
 
 % We will first consider the UV version of DBI inflation,
 % where the brane moves relativistically 
