--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.51 2009/10/13 21:15:08 ith Exp $
+% $Id: dbi.tex,v 1.52 2009/10/26 16:31:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.51 2009/10/13 21:15:08 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.52 2009/10/26 16:31:26 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -25,12 +25,13 @@
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-In this chapter two bounds will be derived which severely challenge the standard
+In this chapter two bounds on the amplitude of primordial gravitational waves will be derived, which
+severely challenge the standard
 DBI inflationary scenario. By considering the field range of observable
 inflation inside a warped throat, the tensor-scalar ratio $r$ will be
 constrained to be less than $10^{-7}$. In contrast a lower bound of $r\gsim
 0.005$ will be derived when the power spectrum of scalar perturbations has a red
-spectral index. These clearly incompatible bounds can be avoided by using a more
+spectral index. These clearly incompatible bounds can be relaxed by using a more
 general form of the DBI action.
 
 % 
@@ -66,7 +67,7 @@ experiments \cite{Baumann:2008aq,vpj}.
 
 On the other hand, the WMAP5 data 
 favours a red perturbation spectrum with 
-$n_s<1$ when the tensor modes are negligible and 
+$n_s<1$ when  
 the scalar spectral index is effectively constant \cite{Komatsu:2008hk}. 
 For models which generate such a spectrum, 
 we identify a corresponding lower limit on the 
@@ -80,7 +81,7 @@ requires either a relaxation of the upper limit on $r$ or a blue
 spectral index $(n_s >1)$. The DBI scenario would need 
 to be generalized in a suitable way for the upper bound on $r$
 to be weakened. Necessary conditions are identified that a 
-generalized action must satisfy for the BM constraint and the newly derived
+generalized action must satisfy for the BM constraint and our newly derived
 bound to be relaxed. 
 Such conditions are shown in Chapter~\ref{ch:multibrane} to be
 realized in a recently proposed IR version of DBI inflation driven
@@ -180,10 +181,11 @@ r_*  < \frac{32}{N (\Neff)^2} \,.
 The effective number of e-foldings $\Neff$, defined in
 \eq{eq:Neff-dbiintro}, 
 is a model-dependent parameter that quantifies 
-how $r$ varies during the final stages of inflation. As $c_s\PX = 1$ in the
-standard DBI model, if $r$ is constant during
-inflation then $\Neff = \N_\mathrm{end}$ which is the total number of e-foldings
-of inflation.
+how $r$ varies during the final stages of inflation. Since $c_s\PX = 1$ in the
+standard DBI model, 
+it follows that $\Neff = \N_\mathrm{end}$ if $r$ is constant during inflation,
+where $\N_\mathrm{end}$ is the total number of e-foldings
+from the epoch of observable inflation until inflation ends.
 
 
 Typically, one expects $30 \, \lsim \, {\Neff} 
@@ -385,8 +387,8 @@ is only marginally consistent with the data when $r\ne 0$ and $\alpha_s=0$.
 Although the results from WMAP5 do allow for a blue spectrum if there is 
 significant negative running in the spectral index, we will 
 focus in this section 
-on models that generate a red spectral index $n_s<1$, since these seem 
-to be preferred by the current data.   
+on models that generate a red spectral index $n_s<1$, since these are preferred by the current
+data.  
 
 
 In general, the spectral index may be related to the tensor-scalar ratio. 
@@ -436,7 +438,7 @@ throat was considered, where the warped brane tension asymptotes to a
 constant value. In this regime, \eq{eq:obscon1} reduces to 
 the condition $r \simeq 2.3 (1-n_s)/\sqrt{-\fnleq}$ when $|\fnleq|$ is 
 sufficiently large to be detectable by Planck, 
-\ie $|\fnleq| > 5$. 
+\ie, $|\fnleq| > 5$. 
 It then follows from the  
 WMAP5 best-fit value $n_s \simeq 0.968$ and lower limit 
 $\fnleq > -151$ \cite{Komatsu:2008hk} that the gravitational wave amplitude 
@@ -452,7 +454,7 @@ More generally, in UV DBI inflation where the brane moves towards the
 tip of the throat, it is reasonable to assume 
 that the warp factor decreases monotonically 
 with the radial coordinate over the observable range of inflaton values, 
-\ie $dh/d \rho \ge 0$. This condition is satisfied for  
+\ie, $dh/d \rho \ge 0$. This condition is satisfied for  
 $AdS_5 \times X_5$ compactifications and KS-type solutions. 
 Consequently, the third term in 
 \eq{eq:obscon1} will be semi-negative definite, 
@@ -530,7 +532,7 @@ In particular, combining the limits
 \end{equation}
 % 
 and we find that $\mathrm{Vol}(X_5) \, \lsim \, 10^{-7}$ 
-for typical values $1-n_s \simeq 0.05$ and 
+is required for typical values $1-n_s \simeq 0.05$ and 
 $\Delta \N_* \simeq 4$. 
 This 
 is comparable to the limit on the volume derived for the special case of a 
@@ -667,7 +669,7 @@ non-canonical actions.
 If we restrict our attention to 
 the observable stage of inflation, and further assume that the variation
 of $f_1f_2 = 2 c_s\PX$ is negligible during that epoch, we can use
-\eq{eq:approxlyth-dbiintro}: 
+\eq{eq:approxlyth-dbiintro} to deduce that 
 % 
 \begin{equation}
 \label{eq:genphivary1}
@@ -682,8 +684,8 @@ for generic warped geometries that are asymptotically
 $AdS_5 \times X_5$ away from the tip of the throat. In addition, 
 if observable scales leave the horizon 
 while the brane is inside the throat, the change in the field value 
-must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. So it follows from   
-\eq{eq:approxlyth-dbiintro} that\footnote{We are 
+must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. It follows from   
+\eq{eq:approxlyth-dbiintro} therefore, that\footnote{We are 
 being conservative by restricting our discussion to the 
 observable phase of inflation. More generally, if 
 $f_1f_2$ remains nearly constant over the last $\N$ 
@@ -797,9 +799,9 @@ h_*^{4/3}N < 20 \left( \Vol g_s \right)^{1/3}
 \frac{( \Delta \N )_*^2}{\Neff^2} \,.
 \end{equation}
 % 
-For typical field-theoretic values $\Vol \simeq \mathcal{O}(\pi^3)$, $m_s \sim
+For typical field-theoretic values $\Vol \simeq \mathcal{O}(\pi^3)$, $m_s \simeq
 0.1 \Mpl$ 
-and  $g_s \sim 10^{-2}$, this implies
+and  $g_s \simeq 10^{-2}$, this implies that
 %  
 \begin{equation}
 \label{eq:LHstronger1}
@@ -1045,12 +1047,12 @@ chapter can be applied.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-In this chapter we have derived an upper limit to
+In this chapter we have derived an upper limit on
 the amplitude of the primordial gravitational wave spectrum
 generated during UV DBI inflation. We considered   
 the maximal inflaton field variation   
 that can occur during the observable stages of inflation and assumed  
-only that the brane was inside the throat during that epoch. 
+only that the brane was propagating inside the throat during that epoch. 
 The bound (\ref{eq:upperbound}) is valid for an arbitrary inflaton potential and 
 warp factor (modulo some weak caveats) and can be expressed 
 entirely in terms of observable parameters once the volume of 
@@ -1067,7 +1069,7 @@ spectral index are negligible. For UV versions of the scenario,
 we have identified a corresponding 
 lower limit on $r$ which applies in this region of 
 parameter space, $r_* \, \gsim \, 0.1 (1-n_s)$. It is clear that 
-the standard model 
+the standard scenario 
 cannot satisfy both the upper and lower bounds 
 on the tensor modes for the observationally favoured value 
 $1-n_s \simeq 0.03$.
@@ -1105,7 +1107,7 @@ an action for the BM bound to be relaxed.
 
 
 
-In this chapter we have shown that primordial gravitational wave constraints 
+In conclusion therefore, we have shown that primordial gravitational wave constraints 
 combined with cosmological observations of the density perturbation
 spectrum act as a powerful discriminant of DBI inflationary models. 
 They also serve as an important observational guide for identifying viable 
