--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.51 2009/10/14 11:31:54 ith Exp $
+% $Id: multibrane.tex,v 1.52 2009/10/26 17:27:27 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.51 2009/10/14 11:31:54 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.52 2009/10/26 17:27:27 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -29,7 +29,7 @@ towards the tip of the throat, a complementary lower bound
 on $r$ can be derived such that the two bounds are incompatible using
 current observational data. In this chapter we will explore
 how to evade, reconcile and weaken these bounds by considering a more general
-class of models that exhibit properties similar to the standard DBI case.
+class of models that exhibit properties similar to the standard DBI scenario.
 
 
 In Section \ref{sec:relaxing-multi} we consider the special algebraic
@@ -44,20 +44,20 @@ if significant non-Gaussianities are generated.
 
 As reviewed in Section~\ref{sec:others-dbi} many alternative ways to relax these
 bounds have been proposed, including
-theories based upon multi-field models, the addition of
+models based upon multiple fields, the addition of
 angular momentum as another degree of freedom and using
-different throat geometries. However in most cases
+different throat geometries. However, in most cases
 the extra degrees of freedom introduced in these models do not solve the problem
 \cite{Alabidi:2008ej}. The 
 bounds are relaxed only by a small fraction, and therefore these models should still be 
-regarded as being unsatisfactory since they require an extreme amount of fine tuning in order
-to work.
+regarded as unsatisfactory since they require an extreme amount of fine tuning in order
+to satisfy the observational constraints.
 
 One alternative possibility is to consider 
 multiple brane configurations\footnote{In certain limits this approach 
 is actually dual to considering wrapped branes \cite{Ward:2007gs}.}. 
 In the case where  
-$n$ branes are localised initially at equal distances $l > l_s$ and 
+$n$ branes are localised initially at equal distances, $l > l_s$, and 
 subsequently follow the same trajectory, 
 the effective theory is equivalent to that of $n$ copies of the
 action for a single brane. A more general initial condition, particularly
@@ -97,7 +97,7 @@ the number of coincident branes is sufficiently small.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % 
 In Chapter~\ref{ch:dbi-intro} we described the standard DBI scenario, in
-which the kinetic function $P$ takes the form in \eq{eq:Pdefn-dbiintro}:
+which the kinetic function $P$ takes the form given in \eq{eq:Pdefn-dbiintro}:
 %  
 \begin{equation}
 \label{eq:DBIkinetic}
@@ -121,8 +121,8 @@ bounds \eqref{eq:genBMbound} and \eqref{eq:LHbound}
 on the tensor-scalar ratio could in principle be 
 significantly relaxed in models where $(c_sP_{,X})_* \gg 1$. 
 In view of the second relation in \eq{eq:cspx1}, it is of interest 
-to take a phenomenological approach and consider the more  
-general class of models where
+to begin by taking a phenomenological approach and to consider the more  
+general class of models that satisfy the relation
 %  
 \begin{equation}
 \label{eq:defalpha}
@@ -141,9 +141,8 @@ for some positive constant $\alpha$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 A large non-Gaussian signature in the curvature perturbation is 
 typically generated in models where the sound speed of fluctuations 
-is small. We will begin by considering 
-scenarios in which this is the case and therefore the kinetic function satisfies
-the inequalities: 
+is small. To proceed, therefore, we consider 
+scenarios that satisfy this condition in the limit where 
 % 
 \begin{equation}
 \label{eq:Plimits}
@@ -151,8 +150,7 @@ X^2 P_{,XXX} \gg XP_{,XX} \gg P_{,X} \,.
 \end{equation}
 % 
 
-
-In these limits the constraint (\ref{eq:defalpha}) reduces to the 
+Having taken these limits the constraint (\ref{eq:defalpha}) reduces to the 
 third-order, non-linear, partial differential equation
 % 
 \begin{equation}
@@ -172,8 +170,7 @@ and it is straightforward to integrate \eq{eq:Qdefn-multi}
 exactly. The remaining integrations can also be performed analytically 
 and the general solution to \eq{eq:pde-multi} for $\alpha \ne
 6$ is given by\footnote{The special case $\alpha =6$ results in an 
-exponential dependence of the kinetic function on $X$, and is 
-therefore an example of a higher-derivative theory. However we 
+exponential dependence of the kinetic function on $X$. However, we 
 do not consider this model further, since it does not lead to a 
 weakening of the gravitational wave constraints.}
 % 
@@ -190,9 +187,9 @@ field and
 l \equiv \frac{2(\alpha -3 )}{\alpha -6} \, . 
 \end{equation}
 % 
-It can be verified that the inequalities (\ref{eq:Plimits}) 
-are satisfied in the `relativistic' limit, where $X \simeq 1/f_2$.
-We consider the inflationary dynamics in this limit in what follows but for
+The inequalities \eqref{eq:Plimits} 
+are satisfied in the relativistic limit, where $X \simeq 1/f_2$, justifying their use.
+We consider the inflationary dynamics in the relativistic limit in what follows but for
 completeness we show in the next section that \eq{eq:defalpha} can be solved
 analytically without this approximation. 
 
@@ -296,7 +293,7 @@ of the expansion of the hypergeometric function.
 The standard DBI scenario is recovered from \eq{eq:gensoln-multi} for
 $l=1/2, \alpha = 2$ (or $s=-1$ in the exact case following a redefinition of
 $f_i$). 
-More generally however, \eq{eq:gensoln-multi} implies that  
+More generally, however, \eq{eq:gensoln-multi} implies that  
 % 
 \begin{eqnarray}
 \label{eq:consequence-multi}
@@ -355,8 +352,8 @@ Unfortunately this is quite difficult to achieve since the inflaton
 will either be associated with an open or closed string mode. 
 The open strings are governed by relativistic actions of the 
 DBI form, whilst closed strings arise from compactification of Einstein gravity
-and are typically put into canonical form.
-However there do exist classes of open string
+and are typically put into a canonical form.
+However, there do exist classes of open string
 models which satisfy the above requirement, 
 namely those associated with multiple coincident branes.
 
@@ -368,8 +365,8 @@ bound on $l$ \footnote{In this discussion, we are ignoring
 the non-trivial backreaction of these branes on the background, and therefore 
 one should be careful about the range of validity of the effective action.}. 
 In the remainder of this chapter we will examine the case of $n$ coincident
-branes as described in \Rref{thomasward}. The large $n$ limit will also
-fall into the class of models with $l=1/2$ which are equivalent to the single
+branes as described in \Rref{thomasward}. The large $n$ limit of this configuration will also
+fall into the class of models with $l=1/2$, which is equivalent to the single
 brane case. On the other hand, if it is assumed that 
 $n$ is finite, the special properties associated with the 
 matrix degrees of freedom become important and this 
@@ -383,7 +380,7 @@ results in a kinetic function satisfying $l \le 1/2$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{The Multiple Coincident Branes model} 
+\section{The Multiple Coincident Brane Model} 
 \label{sec:multibranes-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -414,7 +411,7 @@ combine to fill out representations of $U(n)$ (as opposed to $U(1)^n$
 in the case of separated branes). This introduces a non-Abelian 
 structure into the theory. In the single brane case, the fluctuations of the 
 brane are characterised by induced scalar fields on the world-volume. 
-However for multiple branes
+However, for multiple branes
 these scalars must be promoted to matrix representations of some gauge group. 
 % 
 Typically the transverse space of any given compactification will always admit
@@ -548,7 +545,7 @@ $\hat{C} \simeq n^2$ in the large $n$ limit.
 The kinetic term \eqref{eq:largeP-multi} is clearly of the same form as the
 single-brane DBI term, with $l=1/2$ in the scheme outlined in
 Section~\ref{sec:relaxing-multi}. We can therefore apply the analysis of
-Section~\ref{sec:relaxing-dbi} to see if the bounds described in
+Section~\ref{sec:relaxing-dbi} to investigate whether the bounds described in
 Chapter~\ref{ch:dbi} can be relaxed.
 Comparison with \eq{eq:genaction-dbi} 
 implies that $f_1f_2 =2nW$ and $f_2=2/(T_3h^4)$. Hence, 
@@ -580,7 +577,7 @@ of parameters when the warped compactification corresponds to
 an $AdS_5$ or KS throat, respectively. Recall that the warp 
 factor for the $AdS_5$ throat is given by $h=\varphi/(\sqrt{T_3}L)$.  
 Condition (\ref{eq:warptorelax}) therefore reduces to a constraint on the 
-value of the inflation during observable inflation: 
+value of the inflaton during observable inflation: 
 % 
 \begin{equation}
 \label{eq:phivalue-dbi}
@@ -605,8 +602,13 @@ N< \frac{8\pi^2 (1-n_s)\Pr}{\sqrt{-3\fnleq} ( \Delta \N_*)^2}
 % 
 Assuming the typical values $m_s \sim 10^{-2}\Mpl$, 
 $\Delta \N_* \simeq 4$ and 
-$h_{\rm cut} \sim 10^{-2}$ implies  
-$N < 7 \times 10^7 (1-n_s)(-\fnleq)^{-1/2} < 2\times 10^6$, where 
+$h_{\rm cut} \sim 10^{-2}$ implies
+%   
+\begin{equation}
+N < 7 \times 10^7 (1-n_s)(-\fnleq)^{-1/2} < 2\times 10^6, 
+\end{equation}
+% 
+where 
 the latter inequality follows for $1-n_s <0.05$ and $\fnleq <-5$. 
 
 
@@ -631,8 +633,18 @@ Hence, combining inequalities
 % 
 and specifying $g_s \sim 10^{-2}$ and 
 $\mathrm{Vol}(X_5) \simeq \pi^3$ then yields the limit  
-$\hat{C} \ll 10^{6} (1-n_s)(-\fnleq)^{-1/2} < 2 \times 10^4$, or equivalently,  
-$n \ll 150$. Furthermore, since $f_1f_2 \simeq {\rm constant}$, 
+% 
+\begin{equation}
+\hat{C} \ll 10^{6} (1-n_s)(-\fnleq)^{-1/2} < 2 \times 10^4,
+\end{equation}
+% 
+ or equivalently,
+%   
+\begin{equation}
+n \ll 150.
+\end{equation}
+% 
+Furthermore, since $f_1f_2 \simeq {\rm constant}$, 
 the inequality (\ref{eq:genBMbound}) may be strengthened by a 
 factor of $(   \Neff /\Delta \N_*)^2$ by 
 substituting 
@@ -682,9 +694,9 @@ generalized BM bound to be satisfied:
 % 
 
 
-Recalling that a necessary condition for the backreaction 
+Recall that a necessary condition for the backreaction 
 of the branes to be negligible is 
-$N \gg n \gg 1$ implies that the 
+$N \gg n$ and this implies that the 
 exponential term in (\ref{eq:Nlowerlimit-dbi}) will dominate unless 
 the string coupling constant is extremely small. Hence, for 
 the parameter estimations quoted above, we 
@@ -757,7 +769,7 @@ The coincident brane model outlined in Section~\ref{sec:multibranes-multi}
 takes a significantly different form if instead of assuming a large number of
 coincident branes there are now only a small finite number. The prescription for
 the symmetrised trace given in Eqs.~\eqref{eq:str-even-multi} and
-\eqref{eq:str-odd-multi} must be used and $\rho$ is determined from
+\eqref{eq:str-odd-multi} must be used, where $\rho$ is determined from
 \eq{eq:finiten-rho-multi}. 
 % 
 The resulting kinetic function for $n$ coincident branes in 
@@ -785,11 +797,12 @@ discussed further
 in Refs.~\cite{thomasward} and \cite{Ward:2007gs}.
 
 
-It was shown in \Rref{hltw} that $P$ and $E$ of all the solutions with $n>2$
+It was shown in \Rref{hltw} that the functional forms of the kinetic function, $P$, and
+corresponding energy density, $E$, for all the solutions with $n>2$
 can be derived recursively from the $n=2$ solution. We will use the notation
-$P_n$ and $E_n$ for the first part of the kinetic and energy density terms for
-the $n$ branes solution. The full pressure and energy densities are then 
-given by $P = P_n - nT_3(V-h^4)$ and $E = E_n + nT_3 (V-h^4)$. Using
+$P_n$ and $E_n$ to denote the non-singlet sector of the kinetic and energy density for
+the $n$-brane solutions. The full pressure and energy densities are then 
+given by $P = P_n - nT_3(V-h^4)$ and $E = E_n + nT_3 (V-h^4)$, respectively. Using
 \eq{eq:str-even-multi} and the expressions
 % 
 \begin{eqnarray}
@@ -797,7 +810,7 @@ given by $P = P_n - nT_3(V-h^4)$ and $E = E_n + nT_3 (V-h^4)$. Using
  \sum_{k=0}^\infty A^k \binom{1/2}{k} 4k &=& \frac{2A}{\sqrt{1+A}}\,,
 \end{eqnarray}
 % 
-the terms $P_2$ and $E_2$ can be derived:
+then implies that the terms $P_2$ and $E_2$ can be derived:
 % 
 \begin{eqnarray}
 \label{eq:2brane}
@@ -892,7 +905,7 @@ nT_3(V-h^4) \,.
 The backreaction of the multiple branes introduces corrections of the form $n/N$
 \cite{hltw}. Ensuring that this ratio is small allows the continued use of the
 supergravity analysis. As we will see in the next section it will not be
-difficult to let $N\gg n$ and still constrain this model.
+difficult to constrain this model when $N\gg n$.
 
 
 % 
@@ -981,14 +994,14 @@ lead to an additional potential term for the scalars. However it does belong
 to the same class of models with $l=1/2$. We have 
 verified this convergence numerically since the algebraic sums are
 unfortunately not tractable. The key point is that there must exist some 
-value of $n$, beyond which the function appears to look
-more like the standard DBI action, rather than the 
+value of $n$, beyond which the function appears to resemble the standard DBI action, rather than
+the 
 approximate form proposed in (\ref{eq:unifiedP-multi}). For a range of background 
 solutions, numerical calculations suggest that the approximation is 
 valid up to terms of $\mathcal{O}(10)$ \cite{hltw}. Since there are a large
 number of 
 parameters in the theory, it is possible to find solutions 
-where $n \gg 10$. However we will then be forced to 
+where $n \gg 10$. However, we will then be forced to 
 generate a larger background flux, which will result 
 in a situation where even the conformal 
 Calabi-Yau condition is no longer valid. In view of this, we focus on
@@ -1078,11 +1091,11 @@ takes the constant value
 \YAdS \equiv \frac{4\pi^2 g_s N}{(n-1)^4 \Vol} \,.
 \end{equation}
 % 
-As before, we chose natural field-theoretic values for the volume, 
+As before, we choose natural field-theoretic values for the volume, 
 $\Vol \simeq \pi^3$, and the string coupling, 
 $g_s \simeq 10^{-2}$, and further assume that 
 $(n-1)^2 Y \gg 1$. 
-We again assume that the tensor-scalar ratio should not change significantly
+We again assume that the tensor-scalar ratio does not change significantly
 over the entire range of scales that are accessible to cosmological
 observation, which corresponds to $\Delta \N_* \simeq 4$. 
 After substitution of the above values, therefore, 
@@ -1148,7 +1161,7 @@ limit of  $\fnleq >-151$ implies that $n \le 3$ is required
 for the tensors to be observable. 
 Consequently, if tensor perturbations are detected, this would rule 
 out all models with $n \ge  4$ or, alternatively, would require presently 
-unknown configurations with $N$ exceeding bound (\ref{eq:Nlimit-multi}). 
+unknown configurations with $N$ exceeding the bound (\ref{eq:Nlimit-multi}). 
 
 
 In the above analysis we assumed that the string coupling 
@@ -1199,7 +1212,7 @@ r_* < -\frac{5}{\Neff^2}
 \frac{\fnleq}{(n-1)\sqrt{N}} \,.
 \end{equation}
 %  
-Comparing the limits in Eqs.~\eqref{eq:AdSupper-multi}) and
+Comparing the limits in Eqs.~\eqref{eq:AdSupper-multi} and
 \eqref{eq:bmadsbound} 
 implies that the bound \eqref{eq:LHbound} is stronger than the corresponding BM
 bound \eqref{eq:genBMbound} if 
@@ -1265,7 +1278,7 @@ The relativistic DBI brane scenario represents an attractive,
 string-inspired realisation of the inflationary scenario. In
 Chapter~\ref{ch:dbi} we showed that
 cosmological data has placed very strong constraints on the simplest 
-models based on a single ${\rm D3}$-brane. The strength 
+UV models based on a single ${\rm D3}$-brane. The strength 
 of these constraints follows from field-theoretic upper limits 
 on the tensor-scalar ratio, $r$, which in turn arise because 
 the effective DBI action satisfies special  
@@ -1278,12 +1291,12 @@ In this chapter we have identified a phenomenological class of
 effective actions for which the constraints 
 on $r$ are relaxed if significant (and detectable) 
 non-Gaussian curvature perturbations are generated during inflation. 
-We have provided approximate and exact derivations of this class which coincide
+We have provided approximate and exact derivations of this class of models which coincide
 in the relativistic limit. It would be interesting to 
 investigate whether the effective action (\ref{eq:gensoln-multi}) with values
 of $l \ne - 1/2$ arises in string-inspired settings or elsewhere.
 
-In Section~\ref{sec:multibranes-multi} we introduced the coincident $n$ branes
+In Section~\ref{sec:multibranes-multi} we introduced the coincident $n$-brane
 model of Thomas and Ward \cite{thomasward}. We examined the predictions of this
 model in two limits, arbitrarily large $n$ and small finite $n$. The large $n$
 model
@@ -1310,13 +1323,13 @@ for typical string-theoretic parameter values
 if the number of coincident branes is either $2$~or~$3$. 
 This is consistent with known F-theory configurations and 
 current WMAP5 limits on the non-Gaussianity. Furthermore, 
-we found that the level of non-Gaussianity must exceed $\fnleq 
+we found that the level of non-Gaussianity must satisfy $\fnleq 
 \lsim -70$ if such configurations are to generate a detectable tensor 
 signal. This is well within the projected sensitivity 
 of the Planck satellite \cite{planck}.   
 
 
-Our analysis invoked an $AdS_5 \times X_5$ warped throat geometry. However we 
+Our analysis invoked an $AdS_5 \times X_5$ warped throat geometry. However, we 
 made no assumptions regarding the form of the inflaton potential, other 
 than imposing the implicit requirement that the universe underwent a phase of 
 quasi-exponential expansion. In this sense, therefore, we have 
@@ -1325,21 +1338,23 @@ be able to generate a measurable tensor signal.
 Nonetheless, since such a detection would provide a unique observational 
 window into high energy physics, our results 
 provide strong motivation for considering the cosmological consequences 
-of these multi-brane configurations further when specific choices for the 
+of these multi-brane configurations when specific choices for the 
 inflaton potential are made. In particular, it would be interesting 
 to employ the techniques developed in
 \cite{bean,Peiris:2007gz,Lorenz:2007ze,Bean:2007eh,Bean:2008ga} 
-to identify the ranges of parameter space that are consistent 
+to identify the regions of parameter space that are consistent 
 with current cosmological observations.  
 
-In Part~\ref{part:dbi} of this work we have concentrated on using theoretical
-techniques to constrain inflationary models. In Chapter~\ref{ch:dbi} we showed
-how the single-brane UV DBI model is subject to two incompatible bounds on the
-tensor-scalar ratio. In Chapter~\ref{ch:multibrane} we described a class of
-actions
-which would ease those bounds. We examined the coincident $n$ branes model and
-showed that the scenario in which an observable tensor signal is produced is
-strongly constrained by current observations. In Part~\ref{part:numerical}
+In Part~\ref{part:dbi} of this thesis we have concentrated on using analytic
+techniques to constrain string-inspired inflationary models. 
+% In Chapter~\ref{ch:dbi} we showed
+% how the single-brane UV DBI model is subject to two incompatible bounds on the
+% tensor-scalar ratio. In Chapter~\ref{ch:multibrane} we described a class of
+% actions
+% which would ease those bounds. We examined the coincident $n$ branes model and
+% showed that the scenario in which an observable tensor signal is produced is
+% strongly constrained by current observations. 
+In Part~\ref{part:numerical},
 numerical techniques will be developed with the goal of constraining
-inflationary models using perturbation theory.
+inflationary models using second-order perturbation theory.
 
