Changed to -fnl>5

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.52 2009/10/26 16:31:26 ith Exp $
+% $Id: dbi.tex,v 1.53 2009/10/26 17:37:59 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.52 2009/10/26 16:31:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.53 2009/10/26 17:37:59 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -288,7 +288,7 @@ r_{*} < \frac{32 \pi^3}{(\Delta \N_*)^6 \mathrm{Vol}(X_5)}
 
 Condition (\ref{eq:generalbound}) is 
 only weakly dependent on the level of non-Gaussianity 
-when $\fnleq < -5$ and we may therefore neglect the 
+when $-\fnleq > 5$ and we may therefore neglect the 
 factor involving this parameter. 
 Substituting the WMAP5 normalization 
 $\Pr \simeq 2.5 \times 10^{-9}$ then implies that
@@ -480,12 +480,12 @@ compatible with condition (\ref{eq:halfbound}) if
 \nnleq \simeq -2s > -3 (1-n_s ) \fnleq > -0.078 \fnleq \,.
 \end{equation}
 % 
-However, when $\fnleq \ll -1$, this would violate the slow-roll conditions
+However, when $-\fnleq \gg 1$, this would violate the slow-roll conditions
 that must be satisfied for a consistent 
 derivation of the perturbation spectra 
 (\ref{eq:spectra-dbiintro}). For example, the conservative 
 bound $|s| < 0.1$ with $1-n_s \simeq 0.05$ is violated if  
-$\fnleq < {\cal{O}} (-5)$. 
+$-\fnleq > {\cal{O}} (5)$. 
 
 In view of this, let us consider the case where the tensor 
 perturbations are non-negligible. 
