--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.52 2009/10/26 17:27:27 ith Exp $
+% $Id: multibrane.tex,v 1.53 2009/10/26 17:37:59 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.52 2009/10/26 17:27:27 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.53 2009/10/26 17:37:59 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -609,7 +609,7 @@ N < 7 \times 10^7 (1-n_s)(-\fnleq)^{-1/2} < 2\times 10^6,
 \end{equation}
 % 
 where 
-the latter inequality follows for $1-n_s <0.05$ and $\fnleq <-5$. 
+the latter inequality follows for $1-n_s <0.05$ and $-\fnleq>5$. 
 
 
 For an $AdS_5$ throat, the fuzzy potential 
@@ -707,7 +707,7 @@ deduce the lower limit
 N- 12 \ln N > -6.8 +12 \ln \left( \frac{\sqrt{-\fnleq}}{1-n_s} \right) \,,
 \end{equation}
 % 
-which becomes $N \, \gsim \, 10^2$ for $1-n_s \simeq 0.05$ and $\fnleq<-5$.
+which becomes $N \, \gsim \, 10^2$ for $1-n_s \simeq 0.05$ and $-\fnleq>5$.
 
 
 In general, however, the $K$ and $M$ units of flux are not independent. 
@@ -1151,7 +1151,7 @@ where the theoretic limit \eq{eq:Nlimit-multi} for
 known compactifications has been imposed in the 
 second inequality. We may deduce, therefore, that  
 since we require $n \ge 2$ for consistency, a detectable tensor 
-signal will require $\fnleq < -70$. This implies that an observation of 
+signal will require $-\fnleq >70$. This implies that an observation of 
 the tensors should also be 
 accompanied by a sufficiently large -- and detectable -- non-Gaussianity. 
 In other words, this class of models could  
@@ -1323,8 +1323,8 @@ for typical string-theoretic parameter values
 if the number of coincident branes is either $2$~or~$3$. 
 This is consistent with known F-theory configurations and 
 current WMAP5 limits on the non-Gaussianity. Furthermore, 
-we found that the level of non-Gaussianity must satisfy $\fnleq 
-\lsim -70$ if such configurations are to generate a detectable tensor 
+we found that the level of non-Gaussianity must satisfy $-\fnleq 
+\gsim 70$ if such configurations are to generate a detectable tensor 
 signal. This is well within the projected sensitivity 
 of the Planck satellite \cite{planck}.   
 
