--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.54 2009/10/27 12:22:38 ith Exp $
+% $Id: multibrane.tex,v 1.55 2009/10/27 17:11:52 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.54 2009/10/27 12:22:38 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.55 2009/10/27 17:11:52 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -816,20 +816,20 @@ the $n$-brane solutions. The full pressure and energy densities are then
 given by $P = P_n - nT_3(V-h^4)$ and $E = E_n + nT_3 (V-h^4)$, respectively. Using
 \eq{eq:str-even-multi} and the expressions
 % 
-\begin{eqnarray}
- \sum_{k=0}^\infty A^k \binom{1/2}{k} &=& \sqrt{1+A}\,,\\
- \sum_{k=0}^\infty A^k \binom{1/2}{k} 4k &=& \frac{2A}{\sqrt{1+A}}\,,
-\end{eqnarray}
+\begin{align}
+ \sum_{k=0}^\infty A^k \binom{1/2}{k} &= \sqrt{1+A}\,,\\
+ \sum_{k=0}^\infty A^k \binom{1/2}{k} 4k &= \frac{2A}{\sqrt{1+A}}\,,
+\end{align}
 % 
 then implies that the terms $P_2$ and $E_2$ can be derived:
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:2brane}
-P_2 \left[Z,Y\right] &=& - 2 T_3 h^4 \left(\frac{(1+2Y -
+P_2 \left[Z,Y\right] &= - 2 T_3 h^4 \left(\frac{(1+2Y -
 (2+3Y)\XR)}{\sqrt{1+Y}\sqrt{1-\XR}}\right) \,, \nonumber \\
-E_2 \left[Z,Y\right] &=& 2 T_3 h^4 \left(\frac{(1+2Y -
+E_2 \left[Z,Y\right] &= 2 T_3 h^4 \left(\frac{(1+2Y -
 Y\XR)}{\sqrt{1+Y}(1-\XR)^{3/2}}\right) \,.
-\end{eqnarray}
+\end{align}
 % 
 % These quantities correspond to the pressure and energy density functions 
 % when $n=2$ which arise solely from the DBI sector of the action.
@@ -837,29 +837,43 @@ Y\XR)}{\sqrt{1+Y}(1-\XR)^{3/2}}\right) \,.
 % representations of $SU(2)$, we should expect this structure to follow
 % through in the recursion relation. Indeed, we find that for odd $n$
 % 
-The recursion relation described in \Rref{hltw} can then be written for odd $n$:
+The recursion relation described in \Rref{hltw} can then be written for odd $n$ as
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:oddbrane}
-P_n^{(O)} &=& \left(\sum_{k=1}^{(n-1)/2} P_2 \left[(2k)^2Z, (2k)^2Y\right]
+P_n^{(O)} &= \left(\sum_{k=1}^{(n-1)/2} P_2 \left[(2k)^2Z, (2k)^2Y\right]
 \right)-nT_3(V-h^4) \,, \nonumber \\
-E_n^{(O)} &=& \left(\sum_{k=1}^{(n-1)/2} E_2 \left[(2k)^2Z, (2k)^2Y \right]
+E_n^{(O)} &= \left(\sum_{k=1}^{(n-1)/2} E_2 \left[(2k)^2Z, (2k)^2Y \right]
 \right)+
 nT_3(V-h^4) \,,
-\end{eqnarray}
+\end{align}
 % 
-and for even $n$:
+and for even $n$ as
 %  
-\begin{eqnarray}
+\begin{align}
 \label{eq:evenbrane}
-P_n^{(E)} &=& \left(\sum_{k=1}^{n/2} P_2 \left[(2k-1)^2Z, (2k-1)^2Y\right]
+P_n^{(E)} &= \left(\sum_{k=1}^{n/2} P_2 \left[(2k-1)^2Z, (2k-1)^2Y\right]
 \right)-nT_3(V-h^4) \,, \nonumber \\
-E_n^{(E)} &=& \left(\sum_{k=1}^{n/2} E_2 \left[(2k-1)^2Z, (2k-1)^2Y \right]
+E_n^{(E)} &= \left(\sum_{k=1}^{n/2} E_2 \left[(2k-1)^2Z, (2k-1)^2Y \right]
 \right)+
 nT_3(V-h^4) \,.
-\end{eqnarray}
+\end{align}
 % 
-
+If we let $\delta_n$ = 1 when $n$ is even and $\delta_n=0$ when $n$ is odd, we can
+combine these two expressions \cite{Berndsen:2009ww}:
+% 
+\begin{align}
+\label{eq:combinedPn-multi}
+ P_n &= \left(\sum_{k=1}^{(n-1+\delta_n)/2} P_2 \left[(2k-\delta_n)^2Z,
+(2k-\delta_n)^2Y\right]
+\right)-nT_3(V-h^4) \,, \nonumber \\
+% 
+E_n &= \left(\sum_{k=1}^{(n-1+\delta_n)/2} E_2 \left[(2k-\delta_n)^2Z,
+(2k-\delta_n)^2Y \right] \right)+ nT_3(V-h^4) \,.
+\end{align}
+% 
+In \Rref{Berndsen:2009ww} it was shown that this recursive definition for
+$P_n$ reproduces \eq{eq:largeP-multi} in the large $n$ limit. 
 
 % For example, we can employ these recursion relations to obtain the 
 % solutions for $n=3$:  
@@ -935,27 +949,26 @@ the context of the class of actions derived in Section~\ref{sec:relaxing-multi}
 and show that current observational data can strongly constrain the ability of
 this model to produce an observable tensor signal.
 
-The last terms appearing in the summations of Eqs.~\eqref{eq:oddbrane} 
-and \eqref{eq:evenbrane} correspond  to the $k=(n-1)/2$ 
-term when $n$ is odd and to the $k=n/2$ term when $n$ is even. This 
-implies that for all $n$, these terms can be expressed in the form 
+The last term appearing in the summation of $P_n$ in \eq{eq:combinedPn-multi}
+is $P_2[(n-1)^2Z,$ $(n-1)^2Y]$. 
+This 
+means that for all $n$, this term can be expressed in the form 
 % 
 \begin{equation}
 \label{eq:unifiedgenP-multi}
-P = -2T_3 \left\{ \frac{h^4 \left[ 1+2(n-1)^2Y
+P_n^\mathrm{last} = -2T_3 \left\{ \frac{h^4 \left[ 1+2(n-1)^2Y
 - [ 2+3(n-1)^2Y] (n-1)^2\XR  \right]}{\sqrt{1+(n-1)^2Y}
 \sqrt{1-(n-1)^2\XR}} 
- \right\} -n T_3 \left( V -h^4 \right).
+ \right\}.
 \end{equation}
 % 
 
 
-Inspection of Eqs.~\eqref{eq:2brane}-\eqref{eq:evenbrane} implies that 
+Inspection of Eqs.~\eqref{eq:2brane}-\eqref{eq:combinedPn-multi} implies that 
 the relativistic limit is realised for any finite number of branes when 
 $(n-1)^2 \XR \rightarrow 1$. In this case, the dominant contribution 
-to the summations appearing in Eqs.~\eqref{eq:oddbrane} and
-\eqref{eq:evenbrane}
-will arise from the last term, \eq{eq:unifiedgenP-multi}. In this limit, 
+to the summations appearing in \eq{eq:combinedPn-multi}
+will arise from the last term, \eq{eq:unifiedgenP-multi}. In the relativistic limit, 
 therefore, the kinetic function appearing in the effective action simplifies to 
 % 
 \begin{equation}
@@ -995,26 +1008,29 @@ by starting explicitly with \eq{eq:unifiedP-multi}.
 
 
 At this point we should consider the validity of 
-the function in \eq{eq:unifiedP-multi}. Using the
-recursion relations defined in the previous section, 
-we see that in the large $n$ limit the kinetic function converges to 
-the corresponding function defined in the large $n$ 
-limit in \Rref{thomasward}. This is not the same function as that for
-$n$ separated branes, as the matrix degrees of freedom 
-lead to an additional potential term for the scalars. However it does belong
-to the same class of models with $l=1/2$. We have 
-verified this convergence numerically since the algebraic sums are
-unfortunately not tractable. The key point is that there must exist some 
-value of $n$, beyond which the function appears to resemble the standard DBI action, rather than
-the 
-approximate form proposed in (\ref{eq:unifiedP-multi}). For a range of background 
-solutions, numerical calculations suggest that the approximation is 
-valid up to terms of $\mathcal{O}(10)$ \cite{hltw}. Since there are a large
+the function in \eq{eq:unifiedP-multi}. 
+The recursive relation for $P$ in \eqref{eq:combinedPn-multi} converges to the
+expression in \eq{eq:largeP-multi} in the limit of large $n$
+\cite{Berndsen:2009ww}. 
+% This is not the same function as that for
+% $n$ separated branes, as the matrix degrees of freedom 
+% lead to an additional potential term for the scalars. 
+% However it does belong
+% to the same class of models with $l=1/2$. 
+There must exist some 
+value of $n$, beyond which $P$ appears to resemble \eq{eq:largeP-multi},
+rather than the 
+approximate form proposed in \eq{eq:unifiedP-multi}. 
+For a range of background 
+solutions, numerical calculations suggest that the approximation is valid
+when $n$ is less than $\mathcal{O}(10)$ \cite{hltw}. 
+
+As there are a large
 number of 
 parameters in the theory, it is possible to find solutions 
-where $n \gg 10$. However, we will then be forced to 
-generate a larger background flux, which will result 
-in a situation where even the conformal 
+where $n \gg 10$. However, a larger background flux would then be necessary, which
+would result 
+in a situation where the conformal 
 Calabi-Yau condition is no longer valid. In view of this, we focus on
 the sector of the theory where $n \le 10$, which implies that the 
 backreaction is under control and that the kinetic function
@@ -1022,8 +1038,9 @@ is still of the required form.
 
 
 \eq{eq:unifiedP-multi} is precisely of the form given by the 
-general solution (\ref{eq:gensoln-multi}), where $l=-1/2$ and
-\footnote{This is the case $\alpha =18/5$ or $s=-1/3$ in the analytic solution
+general solution (\ref{eq:gensoln-multi}), where $l=-1/2$ 
+and\footnote{This is the
+case $\alpha =18/5$ or $s=-1/3$ in the analytic solution
 \eqref{eq:thirdint-multi} which after redefinition of the $f_i (\varphi)$
 becomes:
 % 
